--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,12 @@ supabase
 python-dotenv
 pydantic
 pinecone
+langchain
+langchain-openai
+langchain-community
+beautifulsoup4
+requests
+pypdf
+langchain-google-genai
+
+
